--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,19 @@ main {
   outline: none;
 
   background-color: rgba(255, 255, 255);
+  border-radius: 0px 0px 16px 16px;
+  margin-top: -25px;
+
+  box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
+
+  color: #313131;
+  font-size: 20px;
+
+  transition: 0.4s ease;
+}
+
+.search-box .search-bar:focus {
+  background-color: rgba(255, 255, 255, 0.75);
 }
 
 .app.cold {
