--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,9 @@ main {
   background-color: rgba(255, 255, 255, 0.75);
 }
 
+.app.warm {
+  background-image: url('/public/img/leaves.jpg');
+}
 .app.cold {
   background-image: url('/public/img/snowing.jpeg');
 }
